PyMaker/datas/object2/RawHTML/i15201/Python_DOC_referPages.eval-function-doent-work-fine-in-python-2-7.txt
<div class="post-text" itemprop="text">
<p>As far as I know the eval function lets a python program run python code within itself.</p>
<p>I want to run a <code>print()</code> command using <code>eval</code> function in <strong>Python2.7</strong>, but I received the following error : </p>
<pre><code>&gt;&gt;&gt; print "test"
test
&gt;&gt;&gt; command='print "test"'
&gt;&gt;&gt; command
'print "test"'
&gt;&gt;&gt; eval(command)

Traceback (most recent call last):
  File "&lt;pyshell#11&gt;", line 1, in &lt;module&gt;
    eval(command)
  File "&lt;string&gt;", line 1
    print "test"
        ^
SyntaxError: invalid syntax
&gt;&gt;&gt; 
</code></pre>
<p>Note that I don't have any problem with this command it <strong>python3.4</strong> :</p>
<pre><code>&gt;&gt;&gt; print ("test")
test
&gt;&gt;&gt; command='print("test")'
&gt;&gt;&gt; command
'print("test")'
&gt;&gt;&gt; eval(command)
test
&gt;&gt;&gt; 
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>In Python 2 <a href="https://docs.python.org/2/reference/simple_stmts.html#print" rel="nofollow"><code>print xxx</code></a> is a statement, not an expression. <a href="https://docs.python.org/2/library/functions.html#eval" rel="nofollow"><code>eval</code></a> is for evaluating expressions; you can use <a href="https://docs.python.org/2/reference/simple_stmts.html#exec" rel="nofollow"><code>exec</code></a> for executing statements.</p>
<p>In Python 3, <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print(xxx)</code></a> is a function call, so it can be evaluated.</p>
</div>
